--- a/build.gradle
+++ b/build.gradle
@@ -2,4 +2,5 @@
 plugins {
     id 'com.android.application' version '8.0.0-alpha05' apply false
     id 'com.android.library' version '8.0.0-alpha05' apply false
+    id "com.github.youribonnaffe.gradle.format" version "1.5"
 }
